--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "serve build -s -n -L -p $PORT"
+
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,7 @@
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "serve": "^14.2.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
