--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "dev": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "serve build -s -n -L -p $PORT"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^6.9.4",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
